tests/rustdoc-ui/scrape-examples-fail-if-type-error.stderr
error: Compilation failed, aborting rustdoc

error[E0425]: cannot find function, tuple struct or tuple variant `INVALID_FUNC` in this scope
  --> $DIR/scrape-examples-fail-if-type-error.rs:5:5
   |
LL |     INVALID_FUNC();
   |     ^^^^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
